# deepagent1

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  langgraph.json  main.py  pyproject.toml
.hermes/plans/: 2026-04-24_183315-lingering-tasks.md  2026-04-26_173944-let-s-plan-to-fix-these-two-issues.md
docs/plans/: 2026-04-23-fe-harness.md
docs/superpowers/plans/: 2026-04-27-top-5-refactorings.md  2026-04-28-write-file-sanitizer-middleware.md
docs/superpowers/specs/: 2026-04-28-write-file-sanitizer-middleware-design.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  SubagentStatus.tsx
frontend/src/hooks/: useDeepAgent.ts
frontend/src/types/: messages.ts
skills/react-component-patterns/: SKILL.md
skills/react-scaffolding/: SKILL.md
src/: __init__.py  agent.py  middleware.py
tests/: test_agent.py  test_middleware.py
