[project]
name = "deepagent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.8",
    "langchain-ollama>=1.0.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.24",
]
