[project]
name = "deepagent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.8,<0.5.0",
    "langchain-ollama>=1.0.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
